--- a/src/Pages/Blog.css
+++ b/src/Pages/Blog.css
@@ -12,6 +12,7 @@
     position: absolute;
     top: 430px;
     left: 872px;
+    
 }
 .hero-blog-box{
     margin-bottom: 150px;
@@ -31,6 +32,15 @@
     margin-top: 70px;
     background-color: #E7C97D;
     padding: 35px;
+}
+.blog-container li{
+    font-size: 21px;
+}
+.blog-container p{
+    font-size: 21px;
+}
+.blog-conclusion p{
+    font-size: 18px;
 }
 @media (max-width:576px){
     .blog-hero-img img{
